# Github-Projects-MCP

./: .gitignore  CLAUDE.md  README.md
.docs/: README.md
.docs/project/: main-task.md  project-summary.md
.docs/setup/: claude-code-setup.md  installation-guide.md  quickstart.md  start-here.md
.docs/testing/: test-instructions.md  test-report.md
.serena/: project.yml
.serena/memories/: github_projects_fixes.md  github_projects_issues.md
github-projects-mcp/: .env.example  .gitignore  CLAUDE_CODE_SETUP.md  QUICKSTART.md  README.md  TEST_REPORT.md  claude_desktop_config.example.json  claude_desktop_config.json  pyproject.toml
github-projects-mcp/.serena/: project.yml
github-projects-mcp/.serena/memories/: architecture_details.md  code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
github-projects-mcp/src/github_projects_mcp/: __init__.py  config.py  server.py
github-projects-mcp/src/github_projects_mcp/github/: __init__.py  client.py
github-projects-mcp/src/github_projects_mcp/interfaces/: __init__.py  task_manager.py
github-projects-mcp/src/github_projects_mcp/models/: __init__.py  comment.py  label.py  milestone.py  ticket.py
github-projects-mcp/tests/: __init__.py  conftest.py  test_github_client.py
